--- a/conf/SampleConfig.json
+++ b/conf/SampleConfig.json
@@ -144,9 +144,6 @@
 
   "teams" : {
     "A" : "$(teams/A.json)",
-    "B" : "$(teams/B.json)",
-    "C" : "$(teams/C.json)",
-    "D" : "$(teams/D.json)",
-    "E" : "$(teams/E.json)"
+    "B" : "$(teams/B.json)"
   }
 }
